part1/111/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-log-111-svc
spec:
  type: ClusterIP
  selector:
    app: 111-pingpong-log
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
